[gd_scene load_steps=6 format=2]

[ext_resource path="res://DragonObject.tscn" type="PackedScene" id=1]
[ext_resource path="res://Dragon.gd" type="Script" id=2]
[ext_resource path="res://audio/dragon_throw_fire.mp3" type="AudioStream" id=3]
[ext_resource path="res://audio/dragon_wings.mp3" type="AudioStream" id=4]

[sub_resource type="CapsuleShape" id=1]
radius = 0.49159
height = 0.478153

[node name="Dragon" type="KinematicBody"]
collision_layer = 2
collision_mask = 3
script = ExtResource( 2 )

[node name="Dragon" parent="." instance=ExtResource( 1 )]
transform = Transform( 0.312688, 0, 0, 0, 0.312688, 0, 0, 0, 0.312688, 0, 0.0808944, 0 )

[node name="Armature" parent="Dragon" index="0"]
transform = Transform( 1, 2.22029e-16, -2.2471e-16, -2.22029e-16, -0.012006, -0.999928, -2.2471e-16, 0.999928, -0.012006, 0.0271244, 1.08776, -1.50674 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.498696, -0.133238 )
shape = SubResource( 1 )

[node name="CameraPivot" type="Spatial" parent="."]

[node name="CameraSpring" type="SpringArm" parent="CameraPivot"]
transform = Transform( 1, 1.10049e-07, 8.44439e-08, 8.44439e-08, -0.965926, 0.258819, 1.10049e-07, -0.258819, -0.965926, 0, 0.526527, 0 )
spring_length = 2.5

[node name="CameraSpacial" type="Spatial" parent="CameraPivot/CameraSpring"]
transform = Transform( -1, -8.74228e-08, 0, 8.44439e-08, -0.965926, 0.258819, -2.26267e-08, 0.258819, 0.965926, 0, 0, 0 )

[node name="Position3D" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.77267, 0.460676 )

[node name="Fire" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Wings" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[editable path="Dragon"]
